--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "18.18.0"
+    "node": ">=20"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -22,6 +22,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "audit-fix": "npm audit fix"
+    "start": "vite preview",
+    "audit-fix": "npm audit fix",
+    "audit-fix-force": "npm audit fix --force"
   }
 }
